--- a/public/demo.html
+++ b/public/demo.html
@@ -270,7 +270,7 @@ body{font-family:var(--kr);background:var(--bg);color:var(--black);min-height:10
   <div class="center-sm">
     <div class="tag">New Project</div>
     <h1 class="title" data-ko="팀의 의견을<br><em>기획서로.</em>" data-en="Turn opinions<br>into a <em>PRD.</em>">팀의 의견을<br><em>기획서로.</em></h1>
-    <p class="desc" data-ko="프로젝트를 만들고 팀에 공유하세요.<br>각자 의견을 말하면 AI 기획자가 판단하고 정리합니다." data-en="Create a project and share with your team.<br>Each person shares their view — AI planner judges and synthesizes.">프로젝트를 만들고 팀에 공유하세요.<br>각자 의견을 말하면 AI 기획자가 판단하고 정리합니다.</p>
+    <p class="desc" data-ko="프로젝트를 만들고 팀에 공유하세요.<br>각자 의견을 말하면 AI 기획자가 판단하고 정리합니다." data-en="Create a project and share with your team.<br>Each person shares their view — OnPlan AI judges and synthesizes.">프로젝트를 만들고 팀에 공유하세요.<br>각자 의견을 말하면 AI 기획자가 판단하고 정리합니다.</p>
     <div class="card">
       <div class="card-title" data-ko="프로젝트 생성" data-en="Create Project">프로젝트 생성</div>
       <div class="ff"><label class="fl" data-ko="제품 이름 <span class='req'>*</span>" data-en="Product Name <span class='req'>*</span>">제품 이름 <span class="req">*</span></label><input id="pj-name" class="fi" data-ko-ph="예: 발주 관리 시스템" data-en-ph="e.g. Order Management System" placeholder="예: 발주 관리 시스템"></div>
@@ -302,7 +302,7 @@ body{font-family:var(--kr);background:var(--bg);color:var(--black);min-height:10
   <div class="center-sm">
     <div class="tag" id="pj-name-display">발주 관리 시스템</div>
     <h1 class="title" style="font-size:28px" data-ko="의견을<br>들려주세요." data-en="Share your<br>perspective.">의견을<br>들려주세요.</h1>
-    <p class="desc" style="font-size:14px" data-ko="AI 기획자가 질문합니다. 3~5분이면 끝나요.<br>기획 지식 없이 자기 입장만 말하면 됩니다." data-en="AI planner will ask questions. Takes 3–5 minutes.<br>No planning expertise needed — just share your view.">AI 기획자가 질문합니다. 3~5분이면 끝나요.<br>기획 지식 없이 자기 입장만 말하면 됩니다.</p>
+    <p class="desc" style="font-size:14px" data-ko="AI 기획자가 질문합니다. 3~5분이면 끝나요.<br>기획 지식 없이 자기 입장만 말하면 됩니다." data-en="OnPlan AI will ask questions. Takes 3–5 minutes.<br>No planning expertise needed — just share your view.">AI 기획자가 질문합니다. 3~5분이면 끝나요.<br>기획 지식 없이 자기 입장만 말하면 됩니다.</p>
     <div class="card">
       <div class="card-title" data-ko="참여 정보" data-en="Participant Info">참여 정보</div>
       <div class="ff"><label class="fl" data-ko="이름 <span class='req'>*</span>" data-en="Name <span class='req'>*</span>">이름 <span class="req">*</span></label><input id="pt-name" class="fi" data-ko-ph="홍길동" data-en-ph="John Doe" placeholder="홍길동"></div>
@@ -327,7 +327,7 @@ body{font-family:var(--kr);background:var(--bg);color:var(--black);min-height:10
       <div class="chat-hd">
         <div class="chat-ai">
           <div class="chat-av">ON</div>
-          <div><div class="chat-name">OnPlan AI</div><div class="chat-role-label" data-ko="AI 프로덕 기획자" data-en="AI Product Planner">AI 프로덕 기획자</div></div>
+          <div><div class="chat-name">OnPlan AI</div><div class="chat-role-label" data-ko="AI 프로덕 기획자" data-en="OnPlan AI">AI 프로덕 기획자</div></div>
         </div>
         <div style="display:flex;align-items:center;gap:8px">
           <span style="font-size:9px;letter-spacing:1px;color:var(--g500)">CONTEXT</span>
@@ -352,7 +352,7 @@ body{font-family:var(--kr);background:var(--bg);color:var(--black);min-height:10
   <div class="center-sm" style="text-align:center;padding-top:120px;">
     <div class="complete-check">V</div>
     <div class="complete-title" data-ko="의견이 등록되었습니다" data-en="Opinion submitted">의견이 등록되었습니다</div>
-    <div class="complete-desc" data-ko="다른 참여자들의 인터뷰가 완료되면<br>AI 기획자가 종합 판단하여 PRD를 생성합니다." data-en="Once all interviews are complete,<br>AI planner will synthesize and generate the PRD.">다른 참여자들의 인터뷰가 완료되면<br>AI 기획자가 종합 판단하여 PRD를 생성합니다.</div>
+    <div class="complete-desc" data-ko="다른 참여자들의 인터뷰가 완료되면<br>AI 기획자가 종합 판단하여 PRD를 생성합니다." data-en="Once all interviews are complete,<br>OnPlan AI will synthesize and generate the PRD.">다른 참여자들의 인터뷰가 완료되면<br>AI 기획자가 종합 판단하여 PRD를 생성합니다.</div>
     <div style="background:var(--white);border:1px solid var(--border);padding:20px;margin-bottom:24px;">
       <div style="font-size:11px;color:var(--g500);margin-bottom:6px;letter-spacing:1px;text-transform:uppercase" data-ko="참여 현황" data-en="Participation Status">참여 현황</div>
       <div style="font-family:var(--en);font-size:28px;font-weight:800">3<span style="font-size:14px;font-weight:400;color:var(--g500)" data-ko=" / 4명 완료" data-en=" / 4 completed"> / 4명 완료</span></div>
@@ -504,7 +504,7 @@ body{font-family:var(--kr);background:var(--bg);color:var(--black);min-height:10
           <tr><td>Settings</td><td>Team / Alerts</td><td>Detail / Edit</td></tr></table>
           <h3>Technical Constraints</h3>
           <p>Vendors and Orders separated at DB level for future vendor portal extensibility.<br>Notification system depends on external API (SMS: Twilio or similar). Failure handling required.<br>Concurrent edit conflicts: optimistic locking.</p>
-          <h3>Planner Timeline Opinion</h3>
+          <h3>OnPlan Timeline Opinion</h3>
           <p>4 months recommended for 3 P0 features. If forced to 3 months, dashboard filters must be simplified.</p>
           </div>
         </div></div>
@@ -577,7 +577,7 @@ body{font-family:var(--kr);background:var(--bg);color:var(--black);min-height:10
     <div class="trial">
       <div class="trial-tag">TRIAL</div>
       <div class="trial-title" data-ko="수정하고, 공유하고, <em>함께 완성</em>하세요" data-en="Edit, share, and <em>refine together</em>">수정하고, 공유하고, <em>함께 완성</em>하세요</div>
-      <div class="trial-desc" data-ko="기획자 의견 전체 열람, 섹션별 수정, 팀 코멘트까지.<br>체험판에서는 기획자 의견을 2개 섹션만 볼 수 있습니다." data-en="Full planner opinions, section-level edits, team comments.<br>Trial shows planner opinions for 2 sections only.">기획자 의견 전체 열람, 섹션별 수정, 팀 코멘트까지.<br>체험판에서는 기획자 의견을 2개 섹션만 볼 수 있습니다.</div>
+      <div class="trial-desc" data-ko="기획자 의견 전체 열람, 섹션별 수정, 팀 코멘트까지.<br>체험판에서는 기획자 의견을 2개 섹션만 볼 수 있습니다." data-en="Full OnPlan opinions, section-level edits, team comments.<br>Trial shows OnPlan opinions for 2 sections only.">기획자 의견 전체 열람, 섹션별 수정, 팀 코멘트까지.<br>체험판에서는 기획자 의견을 2개 섹션만 볼 수 있습니다.</div>
       <button class="btn" style="width:auto;display:inline-block;padding:13px 32px;" data-ko="Team 플랜 시작하기 — ₩49,000/월" data-en="Start Team Plan — $39/mo">Team 플랜 시작하기 — ₩49,000/월</button>
       <div class="trial-note" data-ko="5시트 포함 · 언제든 해지 가능" data-en="5 seats included · Cancel anytime">5시트 포함 · 언제든 해지 가능</div>
 
@@ -838,7 +838,7 @@ function send(){
 function renderPRD(){
   const _SEC=SEC(),_BODY=BODY(),_OPINION=OPINION(),_CONFLICTS=CONFLICTS(),_COMMENTS=COMMENTS(),_REVISION=REVISION();
   const lockMsg=appLang==='en'?'Available in Team plan':'Team 플랜에서 열람할 수 있습니다';
-  const opLockMsg=appLang==='en'?'Full planner opinions available in Team plan':'기획자 의견은 Team 플랜에서 열람 가능합니다';
+  const opLockMsg=appLang==='en'?'Full OnPlan opinions available in Team plan':'기획자 의견은 Team 플랜에서 열람 가능합니다';
   const issuePh=appLang==='en'?'Share your opinion on this issue...':'이 논점에 대한 의견을 입력하세요...';
   const sendLabel=appLang==='en'?'Send':'전송';
   const approveLabel=appLang==='en'?'Approve':'승인';
@@ -882,9 +882,9 @@ function renderPRD(){
       if(_OPINION[s.n]){
         const opLocked=i>=2;
         if(opLocked){
-          html+=`<div class="po po-locked"><div class="po-title">PLANNER OPINION</div><div class="po-body">${_OPINION[s.n]}</div></div><div class="po-lock-msg">${opLockMsg}</div>`;
+          html+=`<div class="po po-locked"><div class="po-title">ONPLAN OPINION</div><div class="po-body">${_OPINION[s.n]}</div></div><div class="po-lock-msg">${opLockMsg}</div>`;
         } else {
-          html+=`<div class="po"><div class="po-title">PLANNER OPINION</div><div class="po-body">${_OPINION[s.n]}</div></div>`;
+          html+=`<div class="po"><div class="po-title">ONPLAN OPINION</div><div class="po-body">${_OPINION[s.n]}</div></div>`;
         }
       }
 
@@ -897,7 +897,7 @@ function renderPRD(){
           <div class="cb-issue">${cf.issue}</div>
           <div class="cb-context">${cf.context}</div>
           <div class="cb-current">
-            <div class="cb-current-title">AI PLANNER RECOMMENDATION</div>
+            <div class="cb-current-title">ONPLAN RECOMMENDATION</div>
             <div class="cb-current-body">${cf.current}</div>
           </div>
           <div class="cb-input-area" id="${cfId}-input-area">
@@ -922,7 +922,7 @@ function renderPRD(){
 
       // AI Revision
       if(_REVISION[s.n]){
-        html+=`<div class="rev"><div class="rev-title">AI PLANNER REVISION</div><div class="rev-body">${_REVISION[s.n]}</div><div class="rev-actions"><button class="btn-sm btn-sm-y" onclick="alert('${approvedMsg}')">${approveLabel}</button><button class="btn-sm btn-sm-n" onclick="alert('${rejectedMsg}')">${rejectLabel}</button></div></div>`;
+        html+=`<div class="rev"><div class="rev-title">ONPLAN REVISION</div><div class="rev-body">${_REVISION[s.n]}</div><div class="rev-actions"><button class="btn-sm btn-sm-y" onclick="alert('${approvedMsg}')">${approveLabel}</button><button class="btn-sm btn-sm-n" onclick="alert('${rejectedMsg}')">${rejectLabel}</button></div></div>`;
       }
 
       html+=`</div>`;
@@ -950,7 +950,7 @@ function submitIssueComment(cfId){
   setTimeout(()=>{
     const aiItem=document.createElement('div');
     aiItem.className='cb-thread-item fade';
-    aiItem.innerHTML=`<div class="cb-thread-label is-ai">AI PLANNER FEEDBACK</div><div class="cb-thread-body">${reply}</div>`;
+    aiItem.innerHTML=`<div class="cb-thread-label is-ai">ONPLAN FEEDBACK</div><div class="cb-thread-body">${reply}</div>`;
     thread.appendChild(aiItem);
     aiItem.scrollIntoView({behavior:'smooth',block:'nearest'});
   },800);
