--- a/public/demo.html
+++ b/public/demo.html
@@ -337,7 +337,7 @@ body{font-family:var(--kr);background:var(--bg);color:var(--black);min-height:10
 <!-- P4: AI INTERVIEW -->
 <div id="p-chat" class="page">
   <div style="padding:24px;">
-    <div id="sb-p-chat"></div>
+    <div id="sb-p-chat" style="max-width:680px;margin:0 auto;"></div>
     <div class="chat-wrap">
       <div class="chat-hd">
         <div class="chat-ai">
